<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical"
    android:background="#ffffff">

		<RelativeLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content">
			<!--当前的年月-->
		        <RelativeLayout 
		            android:id="@+id/title"
        			android:layout_width="match_parent"
        			android:layout_height="wrap_content"
        			android:layout_marginTop="5dp"
					android:layout_marginBottom="1dp">
		        <TextView
		            android:id="@+id/main_year_month"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_centerInParent="true"
			        android:layout_marginTop="3dp"
			        android:textSize="20dp"
			        android:textColor="#000000"
			        android:drawablePadding="7dp"/>
					<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:id="@+id/detail_lunar"
							android:textColor="#000000"
							android:layout_toRightOf="@+id/main_year_month"
							android:layout_below="@+id/main_year_month"/>
				</RelativeLayout>

			<!--周一到周日-->
		    <LinearLayout 
		        android:id="@+id/week"
		        android:layout_below="@id/title"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal">
		        <TextView 
		            android:layout_width="wrap_content"
		            android:layout_height="match_parent"
		            android:background="#ff0000"
		            android:textColor="#ffffff"
		            android:text="@string/sunday"
		            android:gravity="center"
		            android:layout_weight="1"
					android:textSize="20dp"/>
		        <TextView 
		            android:layout_width="wrap_content"
		            android:layout_height="match_parent"
		            android:background="#ff0000"
		            android:textColor="#ffffff"
		            android:text="@string/monday"
		            android:gravity="center"
		            android:layout_weight="1"
					android:textSize="20dp"/>
		        <TextView 
		            android:layout_width="wrap_content"
		            android:layout_height="match_parent"
		            android:background="#ff0000"
		            android:textColor="#ffffff"
		            android:text="@string/thuesday"
		            android:gravity="center"
		            android:layout_weight="1"
					android:textSize="20dp"/>
		        <TextView 
		            android:layout_width="wrap_content"
		            android:layout_height="match_parent"
		            android:background="#ff0000"
		            android:textColor="#ffffff"
		            android:text="@string/wednesday"
		            android:gravity="center"
		            android:layout_weight="1"
					android:textSize="20dp"/>
		        <TextView 
		            android:layout_width="wrap_content"
		            android:layout_height="match_parent"
		            android:background="#ff0000"
		            android:textColor="#ffffff"
		            android:text="@string/thursday"
		            android:gravity="center"
		            android:layout_weight="1"
					android:textSize="20dp"/>
		        <TextView 
		            android:layout_width="wrap_content"
		            android:layout_height="match_parent"
		            android:background="#ff0000"
		            android:textColor="#ffffff"
		            android:text="@string/friday"
		            android:gravity="center"
		            android:layout_weight="1"
					android:textSize="20dp"/>
		        <TextView 
		            android:layout_width="wrap_content"
		            android:layout_height="match_parent"
		            android:background="#ff0000"
		            android:textColor="#ffffff"
		            android:text="@string/saturday"
		            android:gravity="center"
		            android:layout_weight="1"
					android:textSize="20dp"/>
		    </LinearLayout>

			<!--GridView用于显示日期-->
		    <FrameLayout 
		        android:id="@+id/main_frame"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/week">
		   	    <android.support.v4.view.ViewPager
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:id="@+id/viewpager"
						android:layout_gravity="center"
						android:scrollbars="none">
				</android.support.v4.view.ViewPager>
			</FrameLayout>    
		</RelativeLayout>
</LinearLayout>
